# dag_resgates_proj

./: Dockerfile  README.md  pyproject.toml
resgates_proj/: AzureBlobConnect.py  db.py  main.py  sql.py  url_banco.py
